# simpleICP

./: .gitignore  LICENSE  README.md
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: c-cpp.yml  vcpkg.json
c++/: .clang-format  .gitignore  CMakeLists.txt  build.sh  run_simpleicp.sh
c++/.devcontainer/: Dockerfile  devcontainer.json
c++/src/: corrpts.cpp  corrpts.h  pointcloud.cpp  pointcloud.h  run_simpleicp.cpp  simpleicp-cli.cpp  simpleicp.cpp  simpleicp.h
data/: bunny_part1.xyz  bunny_part2.xyz  dragon1.xyz  dragon2.xyz  dragon3.xyz  lionscan1.xyz  lionscan2.xyz  multisensor_lidar.xyz  multisensor_radar.xyz  plot_pointclouds.m  webots1.xyz  webots2.xyz
julia/: run_simpleicp.jl  simpleicp.jl
julia/.devcontainer/: devcontainer.json
matlab/: pointcloud.m  run_simpleicp.m  simpleicp.m
octave/: knnsearch.m  pointcloud.m  run_simpleicp.m  simpleicp.m
octave/.devcontainer/: Dockerfile  devcontainer.json
python/: README.md  pointcloud.py  run_simpleicp.py  setup.py  simpleicp.py
python/.devcontainer/: Dockerfile  devcontainer.json
python/simpleicp/: __init__.py  corrpts.py  mathutils.py  optimization.py  pointcloud.py  simpleicp.py  utils.py
python/simpleicp/tests/: minimal_working_example.py  run_simpleicp.py  test_simpleicp.py
rust/: Cargo.toml
rust/src/: icp.rs  io.rs  lib.rs  main.rs  point_cloud.rs
rust/tests/: integration.rs
scripts/: benchmark.sh  build_all.sh
